--- a/.env
+++ b/.env
@@ -3,8 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # MongoDB Atlas Connection
-MONGO_URI=mongodb+srv://deelipahir1998_db_user:uRCl4nyknXynTigD@milkmen.ifz7m3q.mongodb.net/milk_delivery_db?retryWrites=true
-
+MONGO_URI=mongodb+srv://deelipahir1998_db_user:uRCl4nyknXynTigD@milkmen.ifz7m3q.mongodb.net/milk_delivery_db?retryWrites=true&w=majority
 
 # JWT Secret (Change this in production)
 JWT_SECRET=SuperSecretKeyForMilkMenApp123
